--- a/irontracking/package.json
+++ b/irontracking/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "connect-mongodb": "^1.1.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.3",
     "morgan": "~1.9.0",
+    "nodemon": "^1.14.12",
     "serve-favicon": "~2.4.5"
   }
 }
