--- a/irontracking/package.json
+++ b/irontracking/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-layout": "^0.1.0",
     "express-session": "^1.15.6",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.3",
