--- a/irontracking/package.json
+++ b/irontracking/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.0.3",
     "morgan": "~1.9.0",
     "node-sass": "^4.7.2",
+    "nodemailer": "^4.4.2",
     "nodemon": "^1.14.12",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
