--- a/irontracking/.gitignore
+++ b/irontracking/.gitignore
@@ -26,6 +26,9 @@ build/Release
 # https://docs.npmjs.com/cli/shrinkwrap#caveats
 node_modules
 
+# Environment variables
+.env
+
 # Debug log from npm
 npm-debug.log
 
